--- a/.github/workflows/dockerauto.yml
+++ b/.github/workflows/dockerauto.yml
@@ -23,4 +23,4 @@ jobs:
       run: |
         docker buildx build --platform linux/amd64,linux/arm64 -t "$DOCKER_USERNAME"/"$DOCKER_PASSWORD":latest .
         echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        docker push <dockerhub-username>/<image-name>:latest
+        docker push "$DOCKER_USERNAME"/"$DOCKER_PASSWORD":latest
