--- a/.github/workflows/dockerauto.yml
+++ b/.github/workflows/dockerauto.yml
@@ -21,6 +21,6 @@ jobs:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
-        docker buildx build --platform linux/amd64,linux/arm64 -t "$DOCKER_USERNAME"/mysysfoo:latest .
+        docker buildx build --platform linux/amd64,linux/arm64 -t "$DOCKER_USERNAME"/"$DOCKER_IMAGE_NAME":latest .
         echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        docker push "$DOCKER_USERNAME"/mysysfoo:latest
+        docker push "$DOCKER_USERNAME"/"$DOCKER_IMAGE_NAME":latest
