--- a/.github/workflows/dockerauto.yml
+++ b/.github/workflows/dockerauto.yml
@@ -14,14 +14,14 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      uses: docker/login-action@v2
       
     - name: Build and Push Docker Image
-      env:
-        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        DOCKER_IMAGE_NAME: ${{secrets.DOCKER_IMAGE_NAME }}
-      run: |
-        docker buildx build --platform linux/amd64,linux/arm64 -t "$DOCKER_USERNAME"/"$DOCKER_IMAGE_NAME":latest .
-        echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        docker push "$DOCKER_USERNAME"/"$DOCKER_IMAGE_NAME":latest
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        
+    - name: Build Docker Image
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE_NAME }} 
+    - name: Push Docker Image
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE_NAME }}
