--- a/.github/workflows/dockerauto.yml
+++ b/.github/workflows/dockerauto.yml
@@ -14,9 +14,7 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Set up Docker Buildx
-      uses: docker/login-action@v2
-      
-    - name: Build and Push Docker Image
+      uses: docker/setup-buildx@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
