--- a/.github/workflows/dockerauto.yml
+++ b/.github/workflows/dockerauto.yml
@@ -23,3 +23,7 @@ jobs:
       run: docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE_NAME }} . 
     - name: Push Docker Image
       run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE_NAME }}
+    - name : running 
+      run : docker run ${{ secrets.DOCKER_IMAGE_NAME }}
+    - name : listing image
+      run : docker image ls
